--- a/src/css/Game.css
+++ b/src/css/Game.css
@@ -1,15 +1,51 @@
 .game-main{
     height: 500px;
     display: flex;
-    padding: 30px;
-  
+    padding: 50px;
+    position: relative;
+    left: 200px;
+}
+.font{
+    color: transparent;
+    padding: 40px;
+    background:linear-gradient(55deg,#216fc8, #9064e6);
+    -webkit-background-clip: text;
+    font-size: 40px;
+  }
+  .contact-social a{
+    cursor: pointer;
+    width: 100px;
+    height: 50px;
+  }
+  .contact-social a:hover .font{
+    transform: scale(1.3);
+    transition: .5s;
+}
+.contact-social{
+    position: relative;
+    left: 10%;
+    width: 500px;
+    background: #121c21;
+    padding: 20px;
+    box-shadow: 9px 9px 40px  -5px #7667b7;
+    border-radius: 10px;
+}
+
+.soc-main{
+    background: var(--primary-color);
+    display: flex;
+    flex-direction: column;
+    align-items:stretch;
+    justify-content: center;
+    height: 80vh;
 }
 .game{
     display: flex;
     align-items: center;
     justify-content: center;
+
     height: 50vh;
-    background: var(--primary-color);
+   
     
 }
 hr{
@@ -35,4 +71,16 @@ div button{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
+/* ----load----------- */
+.load{
+    width: 200px;
+    height: 200px;
+}
+.loading{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color:var(--primary-color);
 }
