--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -5,7 +5,7 @@
     font-family: serif;
 }
  .CPage{
-    height: 80vh;
+    height: 90vh;
     width: 100%;
     background: var(--primary-color);
     display: flex;
@@ -19,7 +19,7 @@
 }
 .ct{
     width: 30%;
-    background: #333;
+    background: #121c21;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -38,6 +38,7 @@
     height: 50px;
     position: relative;
     margin:30px 0;
+   
 
 }
 .cdiv{
@@ -53,8 +54,9 @@
     border-radius:10px;
 }
 .ct h1{
-    font-size: 40px ;
+    font-size: 28px ;
     text-align: center;
+    padding: 0;margin: 0;
 
 }
 .input-box input{
@@ -67,9 +69,10 @@
     border-radius:10px;
     color:#fff;
     padding:20px 45px 20px 20px;
+    font-size: 14px;
 }
 .input-box input::placeholder{
-    color:#fff;
+    color:rgba(255, 255, 255, 0.342);
 }
 .input-box i{
   position: absolute;
@@ -102,10 +105,11 @@ textarea{
     border-radius:10px;
     color:#fff;
     padding:10px;
+    font-size: 15px;
 }
 textarea::placeholder{
-    padding:  10px 45px 20px 20px;
-    color:#fff;
+    /* padding:  10px 10px 20px 20px; */
+    color:rgba(255, 255, 255, 0.342);
 }
 
 /* --------------------------social------------------------- */
@@ -176,19 +180,45 @@ textarea::placeholder{
 }
 .load{
     margin-top: 10px;
+    width: 10px;
+    height: 10px;
+    /* transform: skew(90deg,180deg,360deg); */
+    /* transition: 0.5s; */
+}
+.spinner {
+    position: relative;
+    bottom: -52px;
+    left: 179px;
+    background-image: linear-gradient(hsl(260, 72%, 65%) 35%,hsl(212, 72%, 46%));
     width: 30px;
     height: 30px;
-    transform: skew(90deg,180deg,360deg);
-    transition: 0.5s;
-}
-
+    animation: spinning82341 1.7s linear infinite;
+    text-align: center;
+    border-radius: 50px;
+    filter: blur(1px);
+    box-shadow: 0px -5px 20px 0px hsl(260, 72%, 65%) , 0px 3px 20px 0px hsl(212, 72%, 46%);
+  }
+  
+  .spinner1 {
+    background-color: rgb(36, 36, 36);
+    width: 30px;
+    height: 30px;
+    border-radius: 50px;
+    filter: blur(10px);
+  }
+  
+  @keyframes spinning82341 {
+    to {
+      transform: rotate(360deg);
+    }
+  }
 /* ------------------footer--------------------- */
 .footer{
     position: relative;
     padding: 30px;
     bottom: 0;
     background-clip: text;
-    background:linear-gradient(to left, #216fc8 , #9064e6);
+    background:linear-gradient(to left, #216fc8 , hsl(260, 72%, 65%));
     font-size: 20px;
     color: #fff;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
