--- a/src/css/Game.css
+++ b/src/css/Game.css
@@ -2,8 +2,8 @@
     height: 500px;
     display: flex;
     padding: 50px;
-    position: relative;
-    left: 200px;
+   
+    
 }
 .font{
     color: transparent;
@@ -22,8 +22,7 @@
     transition: .5s;
 }
 .contact-social{
-    position: relative;
-    left: 10%;
+    
     width: 500px;
     background: #121c21;
     padding: 20px;
@@ -35,16 +34,16 @@
     background: var(--primary-color);
     display: flex;
     flex-direction: column;
-    align-items:stretch;
+    align-items:center;
     justify-content: center;
-    height: 80vh;
+    height:35vh;
 }
 .game{
     display: flex;
     align-items: center;
     justify-content: center;
-
-    height: 50vh;
+    height: 500px;
+    
    
     
 }
