--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -1,7 +1,7 @@
 #courses {
     padding: 10px 120px;
     position: relative;
-    height: 100vh;
+    height: 120vh;
     box-sizing: border-box;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background: var(--primary-color);
@@ -78,6 +78,7 @@
     display: flex;
     padding: 10px;
     margin: 20px;
+    flex-wrap: wrap;
 }
 
 .layer {
@@ -146,7 +147,7 @@
 .contain {
     justify-content: center;
     align-items: center;
-
+    flex-wrap: wrap;
 }
 
 .contain .card-list .card {
